[package]
name = "rplidar_drv"
description = "Driver for Slamtec RPLIDAR series laser sensors"
version = "0.6.0"
license = "BSD-2-Clause"
repository = "https://github.com/cnwzhjs/rplidar.rs/tree/master/rplidar_drv"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = ["Tony Huang <tony@slamtec.com>"]
edition = "2018"
documentation = "https://docs.rs/rplidar_drv"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "cnwzhjs/rplidar.rs", branch = "master" }

[lib]
name = "rplidar_drv"
path = "src/lib.rs"

[dependencies]
rpos_drv = "0.2.0"
byteorder = "1.2.7"
crc = "1.8.1"

[workspace]
members = [
    ".",
    "rpos_drv",
    "examples/ultra_simple"
]

[patch.crates-io]
rpos_drv = { path = "rpos_drv" }
