[package]
name = "rplidar_drv"
description = "Driver for Slamtec RPLIDAR series laser sensors"
version = "0.7.0"
license = "BSD-2-Clause"
repository = "https://github.com/cnwzhjs/rplidar.rs"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = ["Tony Huang <tony@slamtec.com>"]
edition = "2018"
documentation = "https://docs.rs/rplidar_drv"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "cnwzhjs/rplidar.rs", branch = "master" }

[lib]
name = "rplidar_drv"
path = "src/lib.rs"

[dependencies]
byteorder = "1.2.7"
crc = "1.8.1"
failure = "0.1.5"
hex-slice = "0.1.4"
serialport = "4.2.0"

[dev-dependencies]
ctrlc = "3.2.5"

