[package]
name = "rplidar_drv"
description = "Driver for Slamtec RPLIDAR series laser sensors"
version = "0.5.0"
license = "BSD-2-Clause"
repository = "https://github.com/cnwzhjs/rplidar.rs/tree/master/rplidar_drv"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = ["Tony Huang <tony@slamtec.com>"]
edition = "2018"

[dependencies]
rpos_drv = "0.1.0"
byteorder = "1.2.7"
crc = "1.8.1"