[package]
name = "ultra_simple"
version = "0.5.0"
authors = ["Tony Huang <tony@slamtec.com>"]
edition = "2018"

[dependencies]
rplidar_drv = { path = "../../rplidar_drv" }
rpos_drv = { path = "../../rpos_drv" }
serialport = { version = "3.1.0", default-features = false, features = [] }
hex-slice = "0.1.4"